# cloud-run-practice

./: .gitignore  Makefile  README.md  docker-compose.yml  moonlit-giggling-whisper.md
.github/workflows/: deploy-prd-backend.yml  deploy-prd-frontend.yml  deploy-stg-backend.yml  deploy-stg-frontend.yml
backend/: Dockerfile  Dockerfile.prod  main.py  pyproject.toml
backend/app/: __init__.py  models.py
backend/app/routers/: chat.py  dashboard.py  jobs.py  metrics.py  scouts.py  students.py
backend/jobs/: runner.py
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  App.vue  types.ts
frontend/src/components/: DashboardStats.tsx  JobStatus.vue  MetricsCard.vue  ScoutList.tsx  StudentCard.tsx
scripts/: create-cloud-run-jobs.sh  create-cloud-scheduler.sh
